# trees

./: .gitignore  CMakeLists.txt  README.md  kdtree.h  util.h
.github/workflows/: cc.yml  make-figures.yml  tests.yml
test/: analyze.py  benchmark.py  test_kdtree.cpp
test/results/: results-m0-n4-k10-l12.json  results-m0-n5-k10-l12.json  results-m0-n5-k100-l12.json  results-m0-n5-k50-l12.json  results-m0-n6-k10-l12.json  results-m0-n6-k100-l12.json  results-m0-n6-k50-l12.json  results-m0-n7-k10-l12.json  results-m0-n7-k100-l12.json  results-m0-n7-k50-l12.json  results-m0-n8-k10-l12.json  results-m0-n8-k100-l12.json  results-m0-n8-k50-l12.json  results-m1-n4-k10-l12.json  results-m1-n5-k10-l12.json  results-m1-n5-k100-l12.json  results-m1-n5-k50-l12.json  results-m1-n6-k10-l12.json  results-m1-n6-k100-l12.json  results-m1-n6-k50-l12.json  results-m1-n7-k10-l12.json  results-m1-n7-k100-l12.json  results-m1-n7-k50-l12.json  results-m1-n8-k10-l12.json  results-m1-n8-k100-l12.json  results-m1-n8-k50-l12.json  results-m2-n4-k10-l1.json  results-m2-n5-k10-l1.json  results-m2-n5-k100-l1.json  results-m2-n5-k50-l1.json  results-m2-n6-k10-l1.json  results-m2-n6-k100-l1.json  results-m2-n6-k50-l1.json  results-m2-n7-k10-l1.json  results-m2-n7-k100-l1.json  results-m2-n7-k50-l1.json  results-m2-n8-k10-l1.json  results-m2-n8-k100-l1.json  results-m2-n8-k50-l1.json  results-m3-n4-k10-l12.json  (+12 more)
